# project_1

./: .flake8  README.md  main.py  pyproject.toml
report/: index.html
src/: categories.py  utils.py
tests/: config.py  test_categories.py  test_utils.py
