
[project]
name = "skypro-project2"
version = "0.1.0"
description = ""
authors = [
    {name = "origin",email = "yura28049119@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.link.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
pytest-coverage = "^0.0"


[tool.black]
line-length=90
target-version= ['py310']


[tool.isort]
profile="black"
line_length=90
multi_line_output=3
skip_gitignore=true
skip_glob= ["**/migrations/*", "**/settings/*"]


[tool.mypy]
mypy_path="./src"
follow_imports="silent"
strict_optional=true
warn_redundant_casts=true
warn_unused_ignores=true
disallow_any_generics=true
check_untyped_defs=true

